--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html th:lang="${lang}">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Alovoa">
-<link rel="manifest" href="/manifest/manifest.json">
 
-<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-<th:block th:replace="fragments.html::bulma"></th:block>
-<th:block th:replace="fragments.html::ui-design"></th:block>
-<link rel="stylesheet" href="/css/alovoa.css" />
-<title th:text="#{login.title}"></title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="Alovoa">
+	<link rel="manifest" href="/manifest/manifest.json">
+
+	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
+	<link rel="stylesheet" href="/css/lib/bulma-collapsible.min.css" />
+	<th:block th:replace="fragments.html::bulma"></th:block>
+	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<link rel="stylesheet" href="/css/alovoa.css" />
+	<title th:text="#{login.title}"></title>
 </head>
+
 <body>
 	<div id="main">
 		<header th:insert="fragments.html::header"></header>
@@ -23,42 +26,47 @@
 				<div>
 					<h3 class="title" th:text="#{login.title}"></h3>
 					<p class="subtitle" th:text="#{login.subtitle}"></p>
-
-					<div class="box">
-						<form th:action="@{/login}" method="POST">
-							<div class="field">
-								<div class="control">
-									<input class="input" type="email" th:placeholder="#{email}"
-										autofocus="" name="username">
+					<header class="card-header collapsible-header">
+						<a href="#collapsible-card" data-action="collapse"
+							class="card-header-icon is-hidden-fullscreen full-width" aria-label="more options"
+							style="padding: 1.25rem; display: flex; justify-content: space-between;">
+							<span class="label" style="margin-bottom: initial;" th:text="#{login.email.sign-in}"></span>
+							<div class="navbar-link"></div>
+						</a>
+					</header>
+					<div id="collapsible-card" class="is-collapsible">
+						<div style="margin-bottom: 48px;">
+							<div style="padding-top: 32px;" class="collapsible-mobile"></div>
+							<h3 th:text="#{login.email.sign-in}" class="collapsible-desktop"
+								style="font-size: 1.3em; font-weight: 600; margin-bottom: 12px;"></h3>
+							<form th:action="@{/login}" method="POST">
+								<div class="field">
+									<div class="control">
+										<input class="input" type="email" th:placeholder="#{email}" autofocus=""
+											name="username">
+									</div>
 								</div>
-							</div>
 
-							<div class="field">
-								<div class="control">
-									<input class="input" type="password"
-										th:placeholder="#{password}" name="password">
+								<div class="field">
+									<div class="control">
+										<input class="input" type="password" th:placeholder="#{password}"
+											name="password">
+									</div>
 								</div>
-							</div>
-							<div th:replace="fragments.html::captcha"></div>
-							<!-- TODO: Causes exception 
+								<div th:replace="fragments.html::captcha"></div>
+								<!-- TODO: Causes exception 
 							<div class="field">
 								<label class="checkbox"> <input type="checkbox"
 									name="remember-me"> Remember me
 								</label>
 							</div>
 							-->
-							<button class="button is-link" th:text="#{submit}"></button>
-						</form>
+								<button class="button is-link" th:text="#{submit}"></button>
+							</form>
+						</div>
 					</div>
 
-					<p>
-						<a href="/password/reset" th:text="#{login.forgot-password}"></a>
-					</p>
-					<p>
-						<a href="/register" th:text="#{login.register}"></a>
-					</p>
-
-					<div class="container" style="margin-top: 48px;" id="oauth-div">
+					<div class="container" style="margin-bottom: 24px; margin-top: 24px;" id="oauth-div">
 						<div class="box">
 							<div class="columns">
 								<button class="button colored"
@@ -68,8 +76,7 @@
 										style="padding-left: 12px; color: white;"
 										th:text="#{login.oauth.google}"></span>
 								</button>
-								<button class="button colored"
-									style="background-color: #4267b2; width: 100%;"
+								<button class="button colored" style="background-color: #4267b2; width: 100%;"
 									onclick="window.location='/oauth2/authorization/facebook'">
 									<img src="/img/facebook-icon.svg" style="height: 32px;"><span
 										style="padding-left: 12px; color: white;"
@@ -78,20 +85,26 @@
 							</div>
 						</div>
 					</div>
+					<div>
+						<p>
+							<a href="/password/reset" th:text="#{login.forgot-password}"></a>
+						</p>
+						<p>
+							<a href="/register" th:text="#{login.register}"></a>
+						</p>
+					</div>
 				</div>
-
-
 			</div>
 		</div>
-
-
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
 
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
+	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/tools/refreshCaptcha.js"></script>
 	<script src="/js/tools/getText.js"></script>
 	<script src="/js/login.js"></script>
 </body>
+
 </html>
