Register and login UI improvements

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,8 +35,8 @@
 						</a>
 					</header>
 					<div id="collapsible-card" class="is-collapsible">
-						<div style="margin-bottom: 48px;">
-							<div style="padding-top: 32px;" class="collapsible-mobile"></div>
+						<div style="margin: 8px;margin-bottom: 48px;" class="box">
+							<div style="padding-top: 4px;" class="collapsible-mobile"></div>
 							<h3 th:text="#{login.email.sign-in}" class="collapsible-desktop"
 								style="font-size: 1.3em; font-weight: 600; margin-bottom: 12px;"></h3>
 							<form th:action="@{/login}" method="POST">
