User audio input accepts all audio types, needed for mobile devices. Some smaller fixes.

--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -11,6 +11,14 @@
 	border-radius: 12px;
 }
 
+#donate-box {
+	margin-top: 24px;
+}
+
+#donate-box:hover, #donate-box *:hover {
+	cursor: pointer;
+}
+
 @media screen and (max-width: 460px) {
 	.box {
 		padding: 0px;
