Refactoring js and css. Added assets to sw.js.

--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -49,8 +49,8 @@
 
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/tools/refreshCaptcha.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/refresh-captcha.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/imprint.js"></script>
 </body>
 </html>
