--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -57,8 +57,8 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/tools/getNotification.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/get-notification.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
 	<script>
 		function viewProfile(idEnc) {
