--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -57,8 +57,8 @@
 
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/tools/checkPassword.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/check-password.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/password-change.js"></script>
 </body>
 </html>
