--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -338,8 +338,8 @@
 	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/lib/notification.js"></script>
 	<script src="/js/lib/cutter.min.js"></script>
-	<script src="/js/tools/getNotification.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/get-notification.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
 	<script src="/js/profile.js"></script>
 </body>
