--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -162,9 +162,9 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/bulma-calendar.min.js"></script>
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
-	<script src="/js/tools/refreshCaptcha.js"></script>
-	<script src="/js/tools/checkPassword.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/refresh-captcha.js"></script>
+	<script src="/js/tools/check-password.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/register.js"></script>
 
 
