--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -110,8 +110,8 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/lib/bulma-slider.min.js"></script>
-	<script src="/js/tools/getNotification.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/get-notification.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
 	<script src="/js/search.js"></script>
 </body>
