--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/lib/swiper.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
-<link rel="stylesheet" href="/css/userProfile.css" />
+<link rel="stylesheet" href="/css/user-profile.css" />
 <title th:value="${user.firstName}"></title>
 </head>
 <body>
@@ -228,10 +228,10 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
-	<script src="/js/tools/refreshCaptcha.js"></script>
+	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/modal.js"></script>
-	<script src="/js/tools/getNotification.js"></script>
-	<script src="/js/tools/getText.js"></script>
-	<script src="/js/userProfile.js"></script>
+	<script src="/js/tools/get-notification.js"></script>
+	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/user-profile.js"></script>
 </body>
 </html>
