--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -89,7 +89,7 @@
 
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/admin.js"></script>
 </body>
 </html>
