--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -55,8 +55,8 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/tools/refreshCaptcha.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/refresh-captcha.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/delete-account.js"></script>
 </body>
 </html>
