--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -102,8 +102,8 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
-	<script src="/js/tools/refreshCaptcha.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/refresh-captcha.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/login.js"></script>
 </body>
 
