--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -42,8 +42,8 @@
 
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/tools/refreshCaptcha.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/refresh-captcha.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/password-reset.js"></script>
 </body>
 </html>
