--- a/src/main/resources/templates/tos.html
+++ b/src/main/resources/templates/tos.html
@@ -28,6 +28,6 @@
 
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/get-text.js"></script>
 </body>
 </html>
