--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -22,6 +22,7 @@
 		<div class="section">
 			<div class="container">
 				<h3 class="title" th:text="#{register.title}"></h3>
+				<p class="subtitle" th:text="#{register.subtitle}"></p>
 				<div class="box">
 					<form th:action="@{/register-oauth}" method="POST"
 						id="register-form">
